--- a/ToDoList/todo.css
+++ b/ToDoList/todo.css
@@ -22,10 +22,10 @@ form{
 	border: 2px solid #232b2b;
 	border-radius: 3px 0 0 3px;
 }
-input::placeholder {
+.input::placeholder {
   color: black;
 }
-.button{
+.btn{
 	width: 15%;
 	padding: 5px;
 	margin-left: -60px;
