--- a/welcomenexseed/shinya.nexseed .oct10/css/style.css
+++ b/welcomenexseed/shinya.nexseed .oct10/css/style.css
@@ -8,6 +8,9 @@ header {
   display: flex;
   justify-content: space-between;
 }
+.target{
+  display: none;
+}
 
 .fixed{
   position: fixed;
@@ -41,6 +44,9 @@ header {
 
 .header-right li:first-child{
   margin-right: 20px;
+}
+.hamburger{
+  display: none;
 }
 /* ------- header ここまで ------ */
 
@@ -184,7 +190,7 @@ header {
   width: 120px;
   text-align: center;
   border-radius: 5px;
-  margin-left: 680px;
+  margin-left: 180px;
   margin-top: 15px;
   border:3px solid #009cd3;
 
@@ -240,6 +246,57 @@ p strong{
     min-width: 375px;
   }
   /*header*/
+.target{
+  display: block;
+  list-style: none;
+  margin-left: 300px;
+}
+.hamburger {
+  width: 28px;
+  margin: 30px 30px;
+  display: block;
+}
+
+
+.hamburger span:after,
+.hamburger span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
+}
+
+.hamburger span:after {
+  top: 9px;
+}
+
+.hamburger span {
+  position: relative;
+  display: block;
+}
+
+.hamburger span,
+.hamburger span:after,
+.hamburger span:before {
+  width: 100%;
+  height: 5px;
+  background-color: #ddd;
+  transition: all 0.5s; /*←アニメーション*/
+  backface-visibility: hidden;
+  border-radius: 2px;
+}
+
+.hamburger.on span {
+  background-color: transparent;
+}
+
+.hamburger.on span:before {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.on span:after {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
 .icon{
   margin-left: 20px;
 }
@@ -251,6 +308,7 @@ p strong{
   display: none;
 }
   /*welcome*/
+
 .title{
   font-size: 30px;
 }
@@ -290,7 +348,11 @@ font-weight: normal;
   margin-right: 0;
 }
   /*contact*/
+.bar{
 
+flex-direction: column;
+  
+}
   /*footer*/
 
 }
