--- a/HP(kurashiru)/style.css
+++ b/HP(kurashiru)/style.css
@@ -67,7 +67,52 @@ img{
 .header-left{
 	display: flex;
 }
+.hamburger {
+  width: 28px;
+  margin: 30px 30px;
+  display: none;
+}
 
+
+.hamburger span:after,
+.hamburger span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
+}
+
+.hamburger span:after {
+  top: 9px;
+}
+
+.hamburger span {
+  position: relative;
+  display: block;
+}
+
+.hamburger span,
+.hamburger span:after,
+.hamburger span:before {
+  width: 100%;
+  height: 5px;
+  background-color: #ddd;
+  transition: all 0.5s; /*←アニメーション*/
+  backface-visibility: hidden;
+  border-radius: 2px;
+}
+
+.hamburger.on span {
+  background-color: transparent;
+}
+
+.hamburger.on span:before {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.on span:after {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
 
 
 /*title*/
@@ -193,6 +238,11 @@ p{
 /*タブレット用*/
 @media screen and (max-width: 960px){
 	/*header*/
+.hamburger{
+	display: block;
+	margin-left: 230px;
+
+}	
 .logo{
 	width: 180px;
 	margin-left: 295px;
