--- a/HP(kurashiru)/style.css
+++ b/HP(kurashiru)/style.css
@@ -113,6 +113,29 @@ img{
 .hamburger.on span:after {
   transform: rotate(-45deg) translate(7px, -8px);
 }
+#drower-bg {
+  display: none; 
+  position: fixed;
+  top: 70px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.drower {
+  position: absolute;
+  top: 70px;
+  height: 100vh;
+  width: 200px;
+  background-color: rgba(8, 8, 8, .5);
+  right: -210px;
+  display: none;
+}
+.drower.on {
+  right: 0;
+  transition-duration: 600ms;
+}
 
 
 /*title*/
@@ -241,8 +264,14 @@ p{
 .hamburger{
 	display: block;
 	margin-left: 230px;
-
 }	
+.drower-bg{
+	display: block;
+}
+.drower{
+	display: block;
+	top:55px;
+}
 .logo{
 	width: 180px;
 	margin-left: 295px;
